--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Montserrat;
-    src: url(/font/Montserrat/Montserrat-VariableFont_wght.ttf);
+    src: url(../font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
 * {
